criando pagina de busca por titulo

--- a/movies-lib/.env
+++ b/movies-lib/.env
@@ -1,4 +1,7 @@
 VITE_API_KEY=api_key=3133782ae4080482c5c7128a04144694
+
 VITE_API=https://api.themoviedb.org/3/movie/
-VITE_SEARCH=https://api.themoviedb.org/3/search/movie/
+
+VITE_SEARCH=https://api.themoviedb.org/3/search/movie
+
 VITE_IMG=https://image.tmdb.org/t/p/w500/
